Bug 1721503: Avoid possible lock-order inversion in shutting down RemoteLazyInputStreamChild r=dom-storage-reviewers,edenchuang

Differential Revision: https://phabricator.services.mozilla.com/D134504